--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Microsoft-Official Website</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
