--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		
 		<main class='main-content'>
 			
-			<img src='bench.png' height='470px'/>
+			<img src='bench.png' width='100%'/>
 			<ul class='center-text'>
 				<li><h3>Surface Pro</h3></li>
 				<li class='text'>Ultra-light and versatile </li>
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 		<center>
-			<img src='img.png'/>
+			<img src='img.png' width='100%'/>
 		</center>
 		<h2>For work</h2>
 		<div class='products'>
