--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		
 		<main class='main-content'>
 			
-			<img src='bench.png' width='100%'/>
+			<img src='bench.png' width='100%' class='top-img'/>
 			<ul class='center-text'>
 				<li><h3>Surface Pro</h3></li>
 				<li class='text'>Ultra-light and versatile </li>
